# openeval

./: .gitignore  README.md  pyproject.toml
data/: finetune_dataset.jsonl
examples/: basic_eval.py  create_finetune_dataset.py
openeval/connectors/: base.py  ollama_connector.py  openai_connector.py  openrouter_connector.py
openeval/eval/: evaluator.py
openeval/judge/: judge.py  schemas.py
openeval/observability/: __init__.py  logger.py  metrics.py  tracer.py
openeval/rag/: __init__.py  embedder.py  knowledge_base.py  retriever.py
openeval/report/: dashboard.py
