# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openeval"
version = "0.1.0"
description = "Lightweight LLM evaluation framework — OpenAI, Ollama, HuggingFace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",       # güzel terminal çıktısı
    "streamlit>=1.35.0",  # dashboard (hafta 3)
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.ruff]
line-length = 88